# template-reactnative-fastapi

./: CHANGELOG.md  LICENSE  README.md  copier.yml  package.json
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/e2e/: README.md
apps/mobile/src/app/: index.tsx
apps/mobile/src/components/: README.md
apps/mobile/src/hooks/: README.md
apps/mobile/src/screens/: README.md
apps/web/: package.json  tsconfig.json
apps/web/src/pages/: index.tsx
docs/: AGENT_PLAYBOOK.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GOVERNANCE.md  PROMPTS_LIBRARY.md  README.md  SECURITY.md
docs/ADR/: 0000-template.md
docs/TEMPLATES/: IMPLEMENTATION_PLAN_TEMPLATE.md  PRD_TEMPLATE.md  USER_STORY_TEMPLATE.md
scripts/: bootstrap.py  scaffold.sh  verify.sh
services/api/: pyproject.toml
services/api/alembic/: README.md
services/api/app/: main.py
services/api/app/core/: __init__.py
services/api/app/tests/: __init__.py  test_health.py
